fixing dark mode code blocks

--- a/scss/leftover.scss
+++ b/scss/leftover.scss
@@ -158,6 +158,9 @@ hr.dark {
   display: none;
 }
 
+pre {
+  color: inherit;
+}
 
 //////////avgerinos
 
